# telecom-browser-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: apntalk-runtime-bridge-contract.md  live-transport-verification-verdict.md  live-verification-environment-notes.md  operator-migration-notes.md  post-release-followup-backlog.md  pr-hardening-summary.md  release-notes-security-hardening.md  release-readiness-audit.md  release-security-summary.md  residual-closure-audit.md  security-hardening.md  security-residual-register.md  telecom-browser-mcp-apntalk-improvement-plan-revised.md  telecom-browser-mcp-implementation-plan-v0.2.md
scripts/: bootstrap.sh  build_failure_signature_library.py  check_static_contract_guardrails.sh  generate_contract_schemas.py  generate_runtime_diagnostics_samples.py  prioritize_remediation_batches.py  render_failure_signature_report.py  render_prioritization_report.py  render_validation_root_cause_report.py  run_architecture_guardrails.py  run_closed_loop_stability_governor.py  run_closed_loop_validation_remediation.py  run_controlled_live_verification.py  run_lifecycle_fault_harness.py  run_live_transport_smoke.sh  run_mcp_handshake_probe.py  run_mcp_interop_probe.py  run_pipeline_governor.py  run_system_drift_detector.py  validate_v0_2_contracts.py
tests/: conftest.py  test_batch_recommendations.py  test_environment_vs_product_split.py  test_known_vs_new_classification.py  test_priority_scoring.py  test_signal_normalization.py  test_signature_deduplication.py  test_signature_extraction.py  test_signature_matching.py
(+1716 files in other folders)
