[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-browser-mcp"
version = "0.1.1"
description = "Telecom-aware browser MCP server for WebRTC dialer observability and control"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "telecom-browser-mcp contributors" }]
license = { text = "MIT" }
dependencies = [
  "mcp>=1.0.0",
  "playwright>=1.50.0",
  "pydantic>=2.9.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7.10",
  "pip-audit>=2.7.3",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[project.scripts]
telecom-browser-mcp = "telecom_browser_mcp.__main__:main"
telecom-browser-mcp-stdio = "telecom_browser_mcp.server.stdio_server:main"
telecom-browser-mcp-http = "telecom_browser_mcp.server.streamable_http_server:main"
telecom-browser-mcp-sse = "telecom_browser_mcp.server.sse_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "host_required: tests that depend on host Playwright/browser runtime and may be skipped in constrained environments",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
